--- a/deps/freetype-gl/CMakeLists.txt
+++ b/deps/freetype-gl/CMakeLists.txt
@@ -138,6 +138,7 @@ include_directories(
     ${OPENGL_INCLUDE_DIRS}
     ${FREETYPE_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/freetype-gl
     ${GLEW_INCLUDE_PATH}
 )
 
